# v0

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
docs/: api.md  architecture.md  overview.md  perf.md  regen.md  whitepaper.md
docs/adrs/: ADR-001-provider-abstraction.md  ADR-002-deterministic-artifact-caching.md  ADR-003-window-based-regen-selection.md  ADR-004-ffmpeg-for-stitching.md  ADR-005-minimal-synchronous-api-for-early-prototypes.md  ADR-006-sqlite-job-metadata-store.md  ADR-007-prompt-normalization-dsl.md  ADR-008-metrics-first-evaluation.md  ADR-009-filesystem-layout-conventions.md  ADR-010-ui-kept-static-(no-build-step).md
docs/dev/: setup.md
docs/integrations/: integration-01.md  integration-02.md  integration-03.md  integration-04.md  integration-05.md  integration-06.md  integration-07.md  integration-08.md  integration-09.md  integration-10.md  integration-11.md  integration-12.md  integration-13.md  integration-14.md  integration-15.md  integration-16.md  integration-17.md  integration-18.md  integration-19.md  integration-20.md  integration-21.md  integration-22.md  integration-23.md  integration-24.md  integration-25.md  integration-26.md  integration-27.md  integration-28.md  integration-29.md  integration-30.md
docs/providers/: http-provider.md
docs/specs/: job-spec.md
examples/datasets/: prompt_corpus.jsonl
examples/job_specs/: cinematic.json  regen_fix.json
scripts/: run_api_local.sh  run_demo.py
tests/: test_prompts.py  test_windows.py
ui/: index.html
(+35 files in other folders)
